--- a/blog.html
+++ b/blog.html
@@ -236,7 +236,7 @@ li.dropdown {
                          <div class="service-cover">
                              <img src="assets/images/blog/retreat1.jpg" alt="">
                              <div class="serv-det">
-                                 <h4>NEMAS Consult Hold Maiden Retreat Outside Accra</h4>
+                                 <h4>NEMAS CONSULT HOLD MAIDEN RETREAT OUTSIDE ACCRA</h4>
                                  <h8>17-01-2022</h8>
                                   <br></br>
                                   <ul>
@@ -251,7 +251,7 @@ li.dropdown {
                          <div class="service-cover">
                              <img src="assets/images/blog/award4.jpg" alt="">
                              <div class="serv-det">
-                                 <h4>NEMAS Consult Honoured</h4>
+                                 <h4>NEMAS CONSULT HONOURED</h4>
                                  <h8>14-01-2022</h8>
                                   <br></br>
                                   <ul>
@@ -265,7 +265,7 @@ li.dropdown {
                          <div class="service-cover">
                              <img src="assets/images/blog/irr.jpg" alt="">
                              <div class="serv-det">
-                                <h4>Atlantic Lithium Limited</h4>
+                                <h4>ATLANTIC LITHIUM LIMITED</h4>
                                  <h8>12-06-2019</h8>
                                   <br></br>
                                   <ul>
@@ -307,7 +307,7 @@ for the establishment of a Lithium Mine industry. NEMAS Consult Limited is still
                          <div class="service-cover">
                              <img src="assets/images/blog/atl-lithium.JPG" alt="">
                              <div class="serv-det">
-                                <h4>AATLANTIC LITHIUM LIMITED</h4>
+                                <h4>ATLANTIC LITHIUM LIMITED</h4>
                                  <h8>14-11-2023</h8>
                                   <br></br>
                                   <ul>
