updated projects, updated gallery, sorted blog

--- a/consultancy.html
+++ b/consultancy.html
@@ -302,6 +302,44 @@ li.dropdown {
     <td class="tg-tzuv"><span style="font-weight:bold">Outcome</span></td>
   </tr>
 <tr>
+    <td class="tg-6ivb"><span style="background-color:#EEE">2024</span></td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Atlantic Lithium Limited (ALL)</td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Environmental and Social Impact Assessment for a Large-Scale Lithium Mining Project. The report was submitted to the Environmental Protection Agency of Ghana for the issuance of an Environmental Permit. <br><br> IFC Performance Standard and World Bank <br>Environmental and Social Standards applied
+    </td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Report submitted to Client</td>
+  </tr>
+<tr>
+    <td class="tg-6ivb"><span style="background-color:#EEE">2023-2024</span></td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">OHC/VAMED/Ghana Health Service</td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Facilitation of the Development of Health Care Waste Management Plan for Six Hospitals in Ghana</td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Main workshop organized, Online coaching ongoing</td>
+  </tr>
+<tr>
+    <td class="tg-6ivb"><span style="background-color:#EEE">2023-2024</span></td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Fidelity Bank PLC</td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Environmental, Social Governance Compliance Audit  for BSD Mining. <br> IFC Performance Standard applied
+    </td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Report submitted to Client</td>
+  </tr>
+<tr>
+    <td class="tg-6ivb"><span style="background-color:#EEE">2022</span></td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">EMS Infra LLC</td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Environmental Feasibility Studies for the provision of water services for Assin Fosu Municipality, Assin South and North Districts.</td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Report completed and submitted to Client</td>
+  </tr>
+<tr>
+    <td class="tg-6ivb"><span style="background-color:#EEE">2022</span></td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Gokem Construction Co. Ltd, Ankara-Turkey</td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Environmental Feasibility Studies for the provision of water services for Atebubu-Amantin Municipality</td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Report completed and submitted to Client</td>
+  </tr>
+<tr>
+    <td class="tg-6ivb"><span style="background-color:#EEE">2021</span></td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Kingsperp Mining Limited</td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Environmental and Social Impact Assessment for a Large-scale Gold Mining.</td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Report completed</td>
+  </tr>
+<tr>
     <td class="tg-6ivb"><span style="background-color:#EEE">2021</span></td>
     <td class="tg-6ivb"><span style="background-color:#EEE">Ghana Integrated Iron and Steel Development Corporation (GIISDEC)</td>
     <td class="tg-6ivb"><span style="background-color:#EEE">Preparation of Community and Stakeholder Engagement Report for Iron Ore Mining Activities within Sheini and Opon Mansi.</td>
