--- a/monitoring.html
+++ b/monitoring.html
@@ -301,6 +301,56 @@ li.dropdown {
     <td class="tg-8wpc"><span style="font-weight:bold">Project</span></td>
   </tr>
   <tr>
+    <td class="tg-huv2"><span style="background-color:#EEE">2023</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">SCANTOGO, Togo</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Point source (TPM, Metals, VOC's, SO2, NO2, CO, O2, Flow rate and gas Velocity) analysis of Kiln Stack, Coal Mill Stack and Clinker Cooler stack </span></td>
+  </tr>
+  <tr>
+    <td class="tg-huv2"><span style="background-color:#EEE">2023</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">AGRIPALMA, Sao Tome e Principe</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Point source analysis (TPM, SO2, NO2, CO2, CO, VOC's)</span></td>
+  </tr>
+  <tr>
+    <td class="tg-huv2"><span style="background-color:#EEE">2023</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">FET Quarry</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Environmental Media Monitoring for Noise, Dust (PM10, PM2.5) and Gases (NO2, SO2, CO)</span></td>
+  </tr>
+  <tr>
+    <td class="tg-huv2"><span style="background-color:#EEE">2023</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Atlantic Lithium Limited </span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Baseline Studies (Dust, Noise, Gases, Metals and Water Quality)</span></td>
+  </tr>
+  <tr>
+    <td class="tg-huv2"><span style="background-color:#EEE">2023</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Incotech</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Environmental Media Monitoring for Noise, Dust (PM10, PM2.5) and Effluent Analysis</span></td>
+  </tr>
+  <tr>
+    <td class="tg-huv2"><span style="background-color:#EEE">2023</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">SDK Monarch</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Environmental Media Monitoring for Noise and Dust (PM10, PM2.5)</span></td>
+  </tr>
+  <tr>
+    <td class="tg-huv2"><span style="background-color:#EEE">2023</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Plantations Socfinaf Ghana</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Stack emission monitoring</span></td>
+  </tr>
+  <tr>
+    <td class="tg-huv2"><span style="background-color:#EEE">2023</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Dzata Cement</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Environmental Media Monitoring for fenceline gases, dust (NO2, SO2, CO, CO2, PM10, PM2.5) and noise, and Filter Exhaust Emission Analysis at their plant</span></td>
+  </tr>
+  <tr>
+    <td class="tg-huv2"><span style="background-color:#EEE">2022</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">QGMI - Obetsebi Lamptey Interchange Project</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Environmental Media Monitoring for Dust (TSP, PM10, PM2.5) Noise, Gases (SO2, NO2, CO, CO2)</span></td>
+  </tr>
+  <tr>
+    <td class="tg-huv2"><span style="background-color:#EEE">2022</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Dzata Cement</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Environmental Media Monitoring for fenceline gases, dust (NO2, SO2, CO, CO2, PM10, PM2.5) and noise, and Filter Exhaust Emission Analysis at their plant</span></td>
+  </tr>
+  <tr>
     <td class="tg-huv2"><span style="background-color:#EEE">2021</span></td>
     <td class="tg-huv2"><span style="background-color:#EEE">Kumasi City Mall</span></td>
     <td class="tg-huv2"><span style="background-color:#EEE">Environmental Media Monitoring for Dust (PM10, PM2.5), Noise,and  Gases (SO2, NO2)</span></td>
