Updated image extensions in gallery

--- a/gallery.html
+++ b/gallery.html
@@ -261,23 +261,23 @@ li.dropdown {
             </div>
             
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-                <img src="assets/images/gallery/gallery16.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery16.JPG" class="img-responsive">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
-                <img src="assets/images/gallery/gallery17.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery17.JPG" class="img-responsive">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-                <img src="assets/images/gallery/gallery18.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery18.JPG" class="img-responsive">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-                <img src="assets/images/gallery/gallery19.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery19.JPG" class="img-responsive">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
-                <img src="assets/images/gallery/gallery20.jpg" class="img-responsive">
+                <img src="assets/images/gallery/gallery20.JPG" class="img-responsive">
             </div>
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
                 <img src="assets/images/gallery/gallery21.JPG" class="img-responsive">
