updated gallery 21 extension

--- a/gallery.html
+++ b/gallery.html
@@ -280,7 +280,7 @@ li.dropdown {
                 <img src="assets/images/gallery/gallery20.JPG" class="img-responsive">
             </div>
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
-                <img src="assets/images/gallery/gallery21.JPG" class="img-responsive">
+                <img src="assets/images/gallery/gallery21.jpg" class="img-responsive">
             </div>
 
 
