Mpianis updates done

--- a/blog.html
+++ b/blog.html
@@ -283,7 +283,7 @@ li.dropdown {
                                 <h8>14-12-2023</h8>
                                  <br></br>
                                  <ul>
-                                           <li>A Soil Expert from NEMAS Consult conducting an infiltration rate of soil, using the double ring infiltrometer.</li>
+                                           <li>A Soil Expert from NEMAS Consult conducting a soil infiltration test using the double ring infiltrometer.</li>
                        </ul>
                                            <li></li>
                        </ul>
