--- a/consultancy.html
+++ b/consultancy.html
@@ -306,7 +306,7 @@ li.dropdown {
     <td class="tg-6ivb"><span style="background-color:#EEE">Atlantic Lithium Limited (ALL)</td>
     <td class="tg-6ivb"><span style="background-color:#EEE">Environmental and Social Impact Assessment for a Large-Scale Lithium Mining Project. The report was submitted to the Environmental Protection Agency of Ghana for the issuance of an Environmental Permit. <br><br> IFC Performance Standard and World Bank <br>Environmental and Social Standards applied
     </td>
-    <td class="tg-6ivb"><span style="background-color:#EEE">Report submitted to Client</td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Environmental Permit issued</td>
   </tr>
 <tr>
     <td class="tg-6ivb"><span style="background-color:#EEE">2023-2024</span></td>
@@ -317,7 +317,8 @@ li.dropdown {
 <tr>
     <td class="tg-6ivb"><span style="background-color:#EEE">2023-2024</span></td>
     <td class="tg-6ivb"><span style="background-color:#EEE">Fidelity Bank PLC</td>
-    <td class="tg-6ivb"><span style="background-color:#EEE">Environmental, Social Governance Compliance Audit  for BSD Mining. <br> IFC Performance Standard applied
+    <td class="tg-6ivb"><span style="background-color:#EEE">“Environmental and Social
+      Environmental, Social and Governance Compliance Audit for BSD Mining.
     </td>
     <td class="tg-6ivb"><span style="background-color:#EEE">Report submitted to Client</td>
   </tr>
@@ -395,7 +396,7 @@ li.dropdown {
   </tr>
   <tr>
     <td class="tg-6ivb"><span style="background-color:#EEE">2016</span></td>
-    <td class="tg-6ivb"><span style="background-color:#EEE">Great West Solar Ltd a subsidiary of Canadian Solar Inc.</span></td>
+    <td class="tg-6ivb"><span style="background-color:#EEE"> Great West Solar Ltd, a subsidiary of Canadian Solar Inc.</span></td>
     <td class="tg-6ivb"><span style="background-color:#EEE">Preparation of Scoping Report and Terms of Reference for Environmental and Social Impact Assessment for 40MW Thermal Plant. A Scoping Report submitted to the Environmental Protection Agency of Ghana</span></td>
     <td class="tg-6ivb"><span style="background-color:#EEE">Scoping Report accepted and Terms of Reference approved</span></td>
   </tr>
@@ -420,7 +421,7 @@ li.dropdown {
   <tr>
     <td class="tg-6ivb"><span style="background-color:#EEE">2015</span></td>
     <td class="tg-6ivb"><span style="background-color:#EEE">ASG Ghana Ltd, a subsidiary of ASG International, Cyprus</span></td>
-    <td class="tg-6ivb"><span style="background-color:#EEE">Environmental Social Impact Assessment for a 191 MW Thermal Energy Plant. Report submitted to the Environmental Protection Agency of Ghana .</span><br><br>Equator Principles, IFC Performance Standard and World Bank Operational Manual applied</td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Environmental and Social Impact Assessment for a 191 MW Thermal Energy Plant. Report submitted to the Environmental Protection Agency of Ghana .</span><br><br>Equator Principles, IFC Performance Standard and World Bank Operational Manual applied</td>
     <td class="tg-6ivb"><span style="background-color:#EEE">Report Reviewed satisfactorily by the EPA</span></td>
   </tr>
   <tr>
@@ -432,7 +433,7 @@ li.dropdown {
   <tr>
     <td class="tg-6ivb"><span style="background-color:#EEE">2015</span></td>
     <td class="tg-6ivb"><span style="background-color:#EEE">Midlands International Company Ltd</span></td>
-    <td class="tg-6ivb"><span style="background-color:#EEE">Environment and Social Management Plan for Beverage Alcohol Storage Facility.</span><br><br>Report submitted to the Environmental Protection Agency of Ghana</td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Environmental and Social Management Plan for Beverage Alcohol Storage Facility.</span><br><br>Report submitted to the Environmental Protection Agency of Ghana</td>
     <td class="tg-6ivb"><span style="background-color:#EEE">Environmental Permit renewed</span></td>
   </tr>
   <tr>
@@ -498,7 +499,7 @@ li.dropdown {
   <tr>
     <td class="tg-6ivb"><span style="background-color:#EEE">2012</span></td>
     <td class="tg-6ivb"><span style="background-color:#EEE">GKL Quarry Ltd</span></td>
-    <td class="tg-6ivb"><span style="background-color:#EEE">Environmental and Social Impact Assessment for a proposed quarry.</span><br><br>Report submitted to the Environmental</td>
+    <td class="tg-6ivb"><span style="background-color:#EEE">Environmental and Social Impact Assessment for a proposed quarry.</span><br><br>Report submitted to the Environmental Protection Agency</td>
     <td class="tg-6ivb"><span style="background-color:#EEE">Environmental Permit issued</span></td>
   </tr>
   <tr>
