--- a/gallery.html
+++ b/gallery.html
@@ -244,7 +244,7 @@ li.dropdown {
 
 
 
-            <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
+            <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
                 <img src="assets/images/gallery/gallery12.JPG" class="img-responsive">
             </div>
 
@@ -252,11 +252,11 @@ li.dropdown {
                 <img src="assets/images/gallery/gallery13.JPG" class="img-responsive">
             </div>
 
-            <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
+            <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
                 <img src="assets/images/gallery/gallery14.JPG" class="img-responsive">
             </div>
 
-            <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
+            <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
                 <img src="assets/images/gallery/gallery15.JPG" class="img-responsive">
             </div>
             
@@ -264,7 +264,7 @@ li.dropdown {
                 <img src="assets/images/gallery/gallery16.JPG" class="img-responsive">
             </div>
 
-            <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
+            <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
                 <img src="assets/images/gallery/gallery17.JPG" class="img-responsive">
             </div>
 
@@ -279,12 +279,12 @@ li.dropdown {
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
                 <img src="assets/images/gallery/gallery20.JPG" class="img-responsive">
             </div>
-            <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
+            <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
                 <img src="assets/images/gallery/gallery21.jpg" class="img-responsive">
             </div>
 
 
-            <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
+            <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
                 <img src="assets/images/gallery/gallery8.JPG" class="img-responsive">
             </div>
 
@@ -292,7 +292,7 @@ li.dropdown {
                 <img src="assets/images/gallery/gallery9.JPG" class="img-responsive">
             </div>
 
-            <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle">
+            <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter irrigation">
                 <img src="assets/images/gallery/gallery10.JPG" class="img-responsive">
             </div>
 
