--- a/monitoring.html
+++ b/monitoring.html
@@ -303,12 +303,12 @@ li.dropdown {
   <tr>
     <td class="tg-huv2"><span style="background-color:#EEE">2023</span></td>
     <td class="tg-huv2"><span style="background-color:#EEE">SCANTOGO, Togo</span></td>
-    <td class="tg-huv2"><span style="background-color:#EEE">Point source (TPM, Metals, VOC's, SO2, NO2, CO, O2, Flow rate and gas Velocity) analysis of Kiln Stack, Coal Mill Stack and Clinker Cooler stack </span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Point source (TPM, Metals, VOCs, SO2, NO2, CO, O2, Flow rate and gas Velocity) analysis of Kiln Stack, Coal Mill Stack and Clinker Cooler stack </span></td>
   </tr>
   <tr>
     <td class="tg-huv2"><span style="background-color:#EEE">2023</span></td>
     <td class="tg-huv2"><span style="background-color:#EEE">AGRIPALMA, Sao Tome e Principe</span></td>
-    <td class="tg-huv2"><span style="background-color:#EEE">Point source analysis (TPM, SO2, NO2, CO2, CO, VOC's)</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Point source analysis (TPM, SO2, NO2, CO2, CO, VOCs)</span></td>
   </tr>
   <tr>
     <td class="tg-huv2"><span style="background-color:#EEE">2023</span></td>
@@ -338,7 +338,7 @@ li.dropdown {
   <tr>
     <td class="tg-huv2"><span style="background-color:#EEE">2023</span></td>
     <td class="tg-huv2"><span style="background-color:#EEE">Dzata Cement</span></td>
-    <td class="tg-huv2"><span style="background-color:#EEE">Environmental Media Monitoring for fenceline gases, dust (NO2, SO2, CO, CO2, PM10, PM2.5) and noise, and Filter Exhaust Emission Analysis at their plant</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Environmental Media Monitoring for fenceline gases (NO2, SO2, CO, CO2), dust (PM10, PM2.5) and noise, and Filter Exhaust Emission Analysis at their plant</span></td>
   </tr>
   <tr>
     <td class="tg-huv2"><span style="background-color:#EEE">2022</span></td>
@@ -378,7 +378,7 @@ li.dropdown {
   <tr>
     <td class="tg-huv2"><span style="background-color:#EEE">2020</span></td>
     <td class="tg-huv2"><span style="background-color:#EEE">Directorate of Research Innovation and Consultancy (DRIC), Univ. of Cape Coast</span></td>
-    <td class="tg-huv2"><span style="background-color:#EEE">Gaseous emission monitoring for (CH4, SO2, NO2, CO, CO2) from two landfill sites in Ghana</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Gaseous emission monitoring for CH4, SO2, NO2, CO, CO2 from two landfill sites in Ghana.</span></td>
   </tr>
   <tr>
     <td class="tg-huv2"><span style="background-color:#EEE">2020</span></td>
@@ -423,7 +423,8 @@ li.dropdown {
   <tr>
     <td class="tg-huv2"><span style="background-color:#EEE">2020</span></td>
     <td class="tg-huv2"><span style="background-color:#EEE">Azar Chemical Industries Limited</span></td>
-    <td class="tg-huv2"><span style="background-color:#EEE">Environmental Media Monitoring for Noise, Dust (TSP, PM10), Gases (NO2, SO2) and for the paint production processes</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Environmental Media Monitoring for Noise, Dust (TSP, PM10),
+      Gases (NO2, SO2) for the paint production processes.</span></td>
   </tr>
   <tr>
     <td class="tg-huv2"><span style="background-color:#EEE">2020</span></td>
@@ -433,7 +434,7 @@ li.dropdown {
   <tr>
     <td class="tg-huv2"><span style="background-color:#EEE">2020</span></td>
     <td class="tg-huv2"><span style="background-color:#EEE">Kasapreko Company Ltd</span></td>
-    <td class="tg-huv2"><span style="background-color:#EEE">Environmental Media Monitoring for Alcoholic Beverage Company Report submitted in Compliance with Akoben Ratings by the Environmental Protection Agency</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">Environmental Media Monitoring for Alcoholic Beverage Company.<br/> Report submitted in Compliance with Akoben Ratings by the Environmental Protection Agency.</span></td>
   </tr>
   <tr>
     <td class="tg-huv2"><span style="background-color:#EEE">2019</span></td>
@@ -478,7 +479,7 @@ li.dropdown {
   <tr>
     <td class="tg-huv2"><span style="background-color:#EEE">2017</span></td>
     <td class="tg-huv2"><span style="background-color:#EEE">Kibi Goldfields Ltd</span></td>
-    <td class="tg-huv2"><span style="background-color:#EEE">Base-line studies of Dust (TSP, PM10), Noise and Gases (NO2, SO2) in preparation of EIA report</span></td>
+    <td class="tg-huv2"><span style="background-color:#EEE">“Baseline studies of Dust (TSP, PM10), Noise and Gases (NO2, SO2) in preparation of EIA report.”</span></td>
   </tr>
   <tr>
     <td class="tg-huv2"><span style="background-color:#EEE">2017</span></td>
