--- a/people.html
+++ b/people.html
@@ -404,7 +404,7 @@ li.dropdown {
                       color: black;
                       text-align: left;
                     "
-                    >Environmental Management Systems Expert</h8
+                    >Environmental Risk and Management Expert</h8
                   >
                 </div>
                 <div class="btn-detail">
@@ -468,7 +468,7 @@ li.dropdown {
                       color: black;
                       text-align: left;
                     "
-                    >Development Expert</h8
+                    >Development Research/Policy Expert</h8
                   >
                 </div>
                 <div class="btn-detail">
@@ -598,7 +598,7 @@ li.dropdown {
                       color: black;
                       text-align: left;
                     "
-                    >Assistant Environmental Consultant</h8
+                    >Environmental and Social Safeguard Officer</h8
                   >
                 </div>
                 <div class="btn-detail">
@@ -631,7 +631,7 @@ li.dropdown {
                       color: black;
                       text-align: left;
                     "
-                    >Transport Sector</h8
+                    >Transport Officer</h8
                   >
                 </div>
                 <div class="btn-detail">
@@ -664,7 +664,7 @@ li.dropdown {
                       color: black;
                       text-align: left;
                     "
-                    >Assistant Consultant- Social Development and Communication Unit</h8
+                    >Social Development and Communication Expert</h8
                   >
                 </div>
                 <div class="btn-detail">
