removed behind jfamco, changed social service image 3

--- a/SCDS.html
+++ b/SCDS.html
@@ -314,7 +314,7 @@ li.dropdown {
                     
                      <div class="col-lg-3 col-sm-2">
                          <div class="service-cover">
-                             <img src="assets/img/IA.jpg" alt="">
+                             <img src="assets/images/social.jpg" alt="">
                              <div class="serv-det">
 <h6 style="font-size:100%;color:blue;text-align:left"></h6>
                                   
@@ -417,7 +417,6 @@ img:hover {
                         <address class="md-margin-bottom-40">   
                             4 Uniq Fruit St.<br>
                             GM-009-1681<br>
-                            (behind JFAMCO)<br>
                             Madina - Accra<br>
                         </address>
  
