removed company image and added selase

--- a/company.html
+++ b/company.html
@@ -303,7 +303,7 @@ div.card-image img {
 <div class="card-container">
 <div class="float-layout-right">
     <div class="card-image">
-      <img src="assets/images/social.jpg">
+      <img src="assets/images/socil.jpg">
       <div class="card">
        <h4 style="font-size:250%;color:blue;text-align:center">Who We Are</h4>
         <div class="card-desc">
