--- a/people2.html
+++ b/people2.html
@@ -433,6 +433,20 @@ li.dropdown {
                          </div>
                      </div>
                  </div>
+                 
+                <div class="col-lg-3 col-sm-3">
+                     <div class="service-cover">
+                         <img src="assets/img/logo1.jpg" alt="">
+                         <div class="serv-det">
+                             <h6 style="font-size:140%;color:blue;text-align:left">Dr. Adanu Selase Kofi<h6><h8 style="font-size:80%;color:black;text-align:left">Remote Sensing and Visual Impact Specialist<h8>
+                             <ul>   
+                         </div>
+                         <div class="btn-detail">
+                              <a class="btn btn-default" href="selase.html">Read More</a>
+                             
+                         </div>
+                     </div>
+                 </div>
 
 
 
