FIXED SELASE PAGE

--- a/contact_us.html
+++ b/contact_us.html
@@ -245,8 +245,7 @@ li.dropdown {
                                     <ul>
                                         <li><i class="fa fa-phone-square"></i> (+233) 503 316 772/ 599 753 668</li>
                                         <li><i class="fa fa-envelope-square"></i> info@nemasconsult.com</li>
-                                        <li><i class="fa fa-map-marker"></i><p>Digital Address: GM-009-1783 <br>Madina -
-Accra, Ghana.</p></li>
+                                        <li><i class="fa fa-map-marker"></i><p>4 Uniq Fruit St.<br>Address: GM-009-1783 <br>Madina - Accra, Ghana.</p></li>
                                     </ul>
                                 </div>
                             </div>
