--- a/selase.html
+++ b/selase.html
@@ -246,8 +246,8 @@ li.dropdown {
                     </div>
                     <aside class="col-md-7">
                         <div class="project-info">
-                            <h4>ABRAHAM OPOKU</h4>
-                            <h6>Traffic Impact Assessment Expert</h6>
+                            <h4>DR. ADANU SELASE KOFI</h4>
+                            <h6>Remote Sensing and Visual Impact Specialist</h6>
                              <br></br>
                             <p class="project-description"style="font-size:120%;color:black;text-align:justify">Dr. Adanu Selase Kofi is a distinguished expert in environmental systems and remote sensing, with over two decades of academic and professional experience. He holds a PhD from the University of the Witwatersrand, South Africa, an MSc in Sustainable Resource Management from the Technical University of Munich, and another MSc in Environmental Engineering and Sustainable Infrastructure from the Royal Institute of Technology, Sweden and a BA in Geography and Resource Development from the University of Ghana.<br>
                                 Dr. Adanu has led impactful research and consultancy projects, including visual impact assessments for mining projects, land degradation studies, and eco-tourism management plans for various communities in Ghana. He has published works in environmental sustainability, land use transitions, and waste management, featured in high-impact journals such as Heliyon and Sustainable Environment.
