--- a/people2.html
+++ b/people2.html
@@ -438,7 +438,7 @@ li.dropdown {
                      <div class="service-cover">
                          <img src="assets/img/logo1.jpg" alt="">
                          <div class="serv-det">
-                             <h6 style="font-size:140%;color:blue;text-align:left">Dr. Adanu Selase Kofi<h6><h8 style="font-size:80%;color:black;text-align:left">Remote Sensing and Visual Impact Specialist<h8>
+                             <h6 style="font-size:140%;color:blue;text-align:left">DR. ADANU SELASE KOFI<h6><h8 style="font-size:80%;color:black;text-align:left">Remote Sensing and Visual Impact Specialist<h8>
                              <ul>   
                          </div>
                          <div class="btn-detail">
