updated solomon bio

--- a/solomon.html
+++ b/solomon.html
@@ -249,7 +249,7 @@ li.dropdown {
                             <h4>MR. SOLOMON ASIAMAH</h4>
                             <h6>Transport Sector</h6>
                              <br></br>
-                            <p class="project-description"style="font-size:120%;color:black;text-align:justify">Sellasie holds the West African Senior School Certificate after successful completion of Akatsi Secondary Technical School in 2007. He further pursued a four (4) year apprentice training in Diesel and Petrol Engine Mechanics from Auto House Engineering in Accra. Sellasie has been practicing defensive driving for over 10 years after obtaining his driving license from the Drivers Vehicle Licensing Authority (DVLA) in 2011 Currently, Sellasie is the Senior Transport Officer at NEMAS Consult.</p>   
+                            <p class="project-description"style="font-size:120%;color:black;text-align:justify">Solomon holds a Higher National Diploma (HND) in Marketing from Accra Technical University (ATU). In 2019, he obtained his driving license from the Driver and Vehicle Licensing Authority (DVLA) and with his five years’ experience in defensive driving is currently with the Transport section of NEMAS Consult Limited, where he applies his skills to ensure efficient operations of his sector. His dedication to safety and professionalism makes him an asset to the Company.</p>   
                             
                         </div><!-- /.project-description -->
                     </aside>
