updates to see if images will work

--- a/people.html
+++ b/people.html
@@ -258,7 +258,7 @@ li.dropdown {
                   data-saveperformance="off"
                   data-title="Awesome Title Here">
                   <img
-                    src="assets/images/team2.JPG"
+                    src="assets/images/team2.jpg"
                     alt="Team Image"
                     data-bgposition="center top"
                     data-bgfit="cover"
