--- a/EMM.html
+++ b/EMM.html
@@ -306,7 +306,7 @@ li.dropdown {
                     
                      <div class="col-lg-3 col-sm-2">
                          <div class="service-cover">
-                             <img src="assets/img/EMM2.jpg" alt="">
+                             <img src="assets/img/emm2.jpg" alt="">
                              <div class="serv-det"> 
 <h6 style="font-size:70%;color:blue;text-align:left"></h6>
                                   
