--- a/TE.html
+++ b/TE.html
@@ -284,7 +284,7 @@ li.dropdown {
 <div class="row">
                      <div class="col-lg-3 col-sm-2">
                          <div class="service-cover">
-                             <img src="assets/img/te1.JPG" alt="">
+                             <img src="assets/img/te1.jpg" alt="">
                              <div class="serv-det">
                                  <h6 style="font-size:70%;color:blue;text-align:left"></h6>
                             
