--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ li.dropdown {
                             </li>
 
                             <li data-transition="fade" data-slotamount="1" data-masterspeed="1000" data-thumb="assets/images/background/brackground_3" data-saveperformance="off" data-title="Awesome Title Here">
-                                <img src="assets/images/background/slide5.JPG" alt="" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
+                                <img src="assets/images/background/slide5.jpg" alt="" data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
                                 <div class="overlay-layer"></div>
 
                                 <div class="tp-caption sft sfb tp-resizeme" data-x="center" data-hoffset="0" data-y="center" data-voffset="-20" data-speed="1500" data-start="500" data-easing="easeOutExpo" data-splitin="none" data-splitout="none" data-elementdelay="0.01" data-endelementdelay="0.3" data-endspeed="1200" data-endeasing="Power4.easeIn">
