--- a/ESRM.html
+++ b/ESRM.html
@@ -315,7 +315,7 @@ li.dropdown {
                     
                      <div class="col-lg-3 col-sm-2">
                          <div class="service-cover">
-                             <img src="assets/img/ESIA3.jpg" alt="">
+                             <img src="assets/img/ESIA3.jpeg" alt="">
                              <div class="serv-det">
 <h6 style="font-size:70%;color:blue;text-align:left"></h6>
                                          
